feat: add grounding system, OODA loop, ADF converter, and dashboard updates
- Add grounding module (text-indexer, selector-registry, grounding-store)
- Add grounding config and schema
- Add OODA loop for pre-pipeline health checks and exploration quality analysis
- Add ADF converter for Jira rich text formatting
- Update SDK orchestrator (pipeline-runner, enforcement-hooks, custom-tools, etc.)
- Update agent prompts (buggenie, orchestrator, scriptgenerator, testgenie)
- Update copilot instructions with grounding and OODA documentation
- Add/reorganize test specs (AOTF-16338, AOTF-16461, AOTF-17109)
- Update web-app dashboard (analytics, chat, results, sidebar, API config)
- Add UserInputPrompt component
- Update workflow-config and schema

--- a/agentic-workflow/config/workflow-config.json
+++ b/agentic-workflow/config/workflow-config.json
@@ -673,6 +673,24 @@
             "bugGenieInvocations"
         ]
     },
+    "ooda": {
+        "_comment": "OODA (Observe–Orient–Decide–Act) loop configuration. Controls pre-pipeline health checks and MCP exploration quality assessment. All OODA logic is deterministic JS — zero LLM calls, zero token cost.",
+        "environmentHealth": {
+            "enabled": true,
+            "_comment": "Pre-pipeline environment readiness check. Prevents wasted 12+ min runs by validating UAT, MCP, Jira, and auth health BEFORE committing to agent sessions.",
+            "abortThreshold": 40,
+            "warnThreshold": 70,
+            "timeoutMs": 10000
+        },
+        "explorationQuality": {
+            "enabled": true,
+            "_comment": "Post-snapshot quality assessment. Catches empty/sparse/loading-spinner snapshots before they cascade into bad selectors and broken scripts.",
+            "minElements": 5,
+            "minRoleDiversity": 3,
+            "retryThreshold": 30,
+            "warnThreshold": 60
+        }
+    },
     "sdk": {
         "_comment": "Copilot SDK Orchestrator configuration — enables programmatic pipeline control",
         "enabled": true,
@@ -718,6 +736,14 @@
                 "agentic-workflow/mcp-server/server.js"
             ],
             "env": {}
+        },
+        "grounding": {
+            "_comment": "Local context grounding system — reduces LLM hallucinations via BM25 code search",
+            "enabled": true,
+            "configPath": "agentic-workflow/config/grounding-config.json",
+            "indexPath": "agentic-workflow/grounding-data",
+            "autoRebuildOnStart": false,
+            "maxContextChars": 12000
         },
         "modes": {
             "full": [
