feat: TaskGenie agent, image attachments, grounding integration, UI improvements
- Add TaskGenie agent (agent definition, registration, frontend support)
- Add image attachment support (ChatInput, ImagePreview, ChatMessage, vision model detection)
- Integrate grounding system into dashboard chat (grounding-store feature map, queryForAgent)
- Add BugGenie followup patterns (bug review copy, ticket created, testing task)
- Add attach_session_images_to_jira tool for forwarding chat images to Jira
- Persist session attachments in chat-session-manager for Jira forwarding
- Fix SSE status indicator (Ready vs Disconnected)
- Fix Conversations panel z-index/overflow overlap with navigation sidebar
- Add taskgenie to agent-options, grounding-config agentBoosts
- Update codereviewer agent with grounding section
- Refine SessionList transition to width/border-color only

--- a/agentic-workflow/config/grounding-config.json
+++ b/agentic-workflow/config/grounding-config.json
@@ -393,6 +393,15 @@
                 "test(",
                 "expect",
                 "await"
+            ],
+            "taskgenie": [
+                "task",
+                "testing",
+                "test case",
+                "assign",
+                "link",
+                "jira",
+                "ticket"
             ]
         }
     },
